--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1172,9 +1172,9 @@ body {
 
 /* Logo hình ở footer */
 .footer-logo-icon {
-  width: 250px;
+  /* width: 250px; */
   height: 70px;
-  border-radius: 14px;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -1185,6 +1185,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  background-color: #020617;
 }
 
 .footer-logo-text {
