FEAT: update related reference in job detail render page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1968,7 +1968,7 @@ a {
       rgba(15, 23, 42, 0.55),
       rgba(15, 23, 42, 0.55)
     ),
-    url("../../public/img/Slider_3.jpg");
+    url("../../public/img/");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
